refactor namespace as library

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "minimum-stability" : "dev",
 	"autoload" : {
 		"psr-4" : {
-			"oat\\search\\" : "src",
-			"oat\\search\\test\\" : "test"
+                        "oat\\search\\test" : "test",
+			"oat\\search\\" : "src"
 		}
 	}
     
