--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name" : "oat-sa/lib-generis-search",
+    "version" : "1.1.1",
     "require" : {
         "zendframework/zend-servicemanager" : "~2.5.0"
     },
