--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "zendframework/zend-servicemanager": "~2.5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.4@dev",
-    "sebastian/global-state": "~1.0@dev",
+    "phpunit/phpunit": "^8.5",
     "mikey179/vfsStream": "1.4.0"
   },
   "minimum-stability": "dev",
