--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
-    "mikey179/vfsStream": "1.4.0"
+    "mikey179/vfsstream": "1.4.0"
   },
   "minimum-stability": "dev",
   "autoload": {
