--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "zendframework/zend-servicemanager": "~2.5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5",
-    "mikey179/vfsstream": "1.4.0"
+    "mikey179/vfsstream": "1.4.0",
+    "phpunit/phpunit": "^8.5"
   },
   "minimum-stability": "dev",
   "autoload": {
